# Yournal

./: .gitignore  backup.rs  build_log.txt  index.html  package.json  run.bat  vite.config.ts
.github/workflows/: android-build.yml  build.yml  codeql.yml
leksika_frontend/: .env  README.md  biome.json  build_error.txt  build_log.txt  fix_strings.ps1  fix_strings_final.py  index.html  package.json  postcss.config.js  regression.diff  tailwind.config.js  tsconfig.json  vite.config.js
leksika_frontend/public/: ads.txt  manifest.json  me.avif  og-image.avif  sitemap.xml
leksika_frontend/public/wasm/: material-color-utilities.js  material-kolor.js
leksika_frontend/src/: App.vue  app.d.ts  i18n.ts  main.ts
leksika_frontend/src/assets/: main.css
leksika_frontend/src/components/: 2FA.vue  AdBanner.vue  Artikel.vue  Attribution.vue  BuatDaftar.vue  CookieBanner.vue  CookiePolicy.vue  Daftar.vue  DaftarBerhasil.vue  DeveloperAvatar.vue  FAQ.vue  Footer.vue  Header.vue  Home.vue  Kontak.vue  Loading.vue  LoadingSpinner.vue  (+15 more)
leksika_frontend/static/: robots.txt
public/: audio-recorder-processor.js
public/lyra/: README.md  lyra-encode-worker.js  lyra.js
public/wasm/: material-color-utilities.js.map  material-kolor.js.map
src/: App.css  App.tsx  index.tsx  theme.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: drive_api.rs  lib.rs  main.rs  oauth.rs
src-tauri/templates/: 5_whys.html  body_scan.html  cbt_thought_record.html  cornell_notes.html  habit_loop.html  nvc_reflection.html  pro_cons.html  radical_acceptance.html  rule_101010.html  smart_goals.html  stop_technique.html  swot.html  unsent_letter.html  value_alignment.html
src/components/: Header.tsx  UserAvatar.tsx
src/data/: noteTemplates.ts
src/services/: db.ts  lyra_service.ts
src/stores/: appStore.ts
src/styles/: fonts.css
src/utils/: SolidNodeView.ts  audio.ts  date.ts  file.ts  latexEvaluator.ts  viewportFix.ts  weather.ts
(+236 files in other folders)
