[package]
name = "yournal"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "yournal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2.3.2", features = ["sqlite"] }
tauri-plugin-log = "2"
log = "0.4"
tauri-plugin-http = "2.5.7"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif", "bmp"] }
ravif = { version = "0.11", default-features = false, features = ["threading"] }
rgb = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "multipart", "stream"] }
tokio = "1.49.0"
url = "2.5.8"
mime = "0.3.17"
tiny_http = "0.12.0"
urlencoding = "2.1.3"
tauri-plugin-geolocation = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-share = "2.0.5"
tauri-plugin-device = "1.0.0"
tauri-plugin-network = "2.0.4"

[profile.dev]
incremental = true
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[profile.release]
panic = "abort" # Reduce binary size
codegen-units = 1 # Better optimization
lto = true # Link Time Optimization
opt-level = "s" # Optimize for size

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-barcode-scanner = "2"
tauri-plugin-biometric = "2"
tauri-plugin-haptics = "2"


